config-manifest/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - mydomain.com
      - prometheus.mydomain.com
      - monitoring.mydomain.com
    secretName: tls-secret
  rules:
  - host: mydomain.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: streamlit-webapp-service 
            port:
              number: 8501              
  - host: mydomain.com
    http:
      paths:
      - pathType: Prefix
        path: /monitoring
        backend:
          service:
            name: ml-monitor-service
            port:
              number: 8501
  - host: prometheus.mydomain.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
  - host: monitoring.mydomain.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ml-monitor-service
            port:
              number: 8501
